--- a/style.css
+++ b/style.css
@@ -86,4 +86,11 @@ body,
 
 #logo {
     position: absolute;
+    
+}
+#logo {
+    position: absolute;
+    top: 220px;
+    width: 180px;
+    height: auto;
 }
